plugins {
    id "org.openjfx.javafxplugin" version "0.0.9"
    id 'edu.sc.seis.launch4j' version '2.4.6'
}

targetCompatibility = 11
sourceCompatibility = 11

javafx {
    version='11.0.2'
    modules=['javafx.controls', 'javafx.fxml']
}

sourceSets.main.java.srcDirs = [ "src/" ]
sourceSets.main.resources.srcDirs = ["../android/assets"]

repositories {
    mavenCentral()
}

apply plugin: 'java'

compileJava {
    doFirst {
        options.compilerArgs = [
                '--module-path', classpath.asPath,
                '--add-modules', 'javafx.controls,javafx.fxml,javafx.graphics'
        ]
    }
}

jar {
    manifest {
        attributes 'Main-Class': "com.foloke.ardconnd.Launcher"
    }
    from {
        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
    }
}

createExe {
    headerType="console"
    mainClassName = "com.foloke.ardconnd.Launcher"
    outfile = "Ardconn.exe"
    //copyConfigurable = ['D:\\test\\ArduinoConnection\\desktop\\build\\libs','D:\\OpenJFX\\javafx-sdk-11.0.2\\lib',]
    jar = '../libs/desktop-1.0.jar'
    bundledJrePath = 'jre'
    jvmOptions = [
            "--module-path lib",
            '--add-modules javafx.controls,javafx.fxml'
    ]

    messagesStartupError = "error"
    messagesBundledJreError = "jre?"
    messagesInstanceAlreadyExists = "already opend"
    messagesLauncherError = "LauncherErr"
}

eclipse.project.name = appName + "-desktop"
